code/kubernetes/traefik/cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PATCH
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowOriginList:
      - "*"
    accessControlAllowHeaders:
      - Origin
      - Accept
      - Content-Type
      - X-Requested-With
      - Authorization
    accessControlMaxAge: 100
    addVaryHeader: true
