code/kubernetes/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
  - name: web
    port: 80
    targetPort: web
  type: LoadBalancer
