code/kubernetes/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grpc-gateway
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: PathPrefix(`/api`)
    kind: Rule
    services:
    - name: grpc-gateway
      port: 80
    middlewares:
    - name: cors
    - name: strip-prefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PATCH
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowOriginList:
      - "*"
    accessControlAllowHeaders:
      - Origin
      - Accept
      - Content-Type
      - X-Requested-With
      - Authorization
    accessControlMaxAge: 100
    addVaryHeader: true
